fix cleaning important data.

--- a/configure.ac
+++ b/configure.ac
@@ -2363,6 +2363,7 @@ AC_SUBST(XMLSEC_LIBS)
 
 AC_SUBST(XMLSEC_DEFINES)
 AC_SUBST(XMLSEC_APP_DEFINES)
+CFLAGS="$CFLAGS -fno-builtin-memset"
 AC_SUBST(CFLAGS)
 AC_SUBST(CPPFLAGS)
 AC_SUBST(LDFLAGS)
