--- a/.github/workflows/make-check.yml
+++ b/.github/workflows/make-check.yml
@@ -15,9 +15,9 @@ jobs:
         os: [ubuntu-latest, macos-latest]
         include:
         -os: ubuntu-latest
-          BUILD_TOOOLS_INSTALL: sudo apt install automake autoconf libtool libtool-bin libltdl-dev libltdl7
-          LIBXML2_INSTALL: sudo apt install libxml2 libxml2-dev libxslt1.1 libxslt1-dev
-          CRYPTO_LIBS_INSTALL: sudo apt install libssl1.0.0 libssl-dev libnspr4 libnspr4-dev libnss3 libnss3-dev libnss3-tools libgcrypt20 libgcrypt20-dev libgnutls28-dev
+          BUILD_TOOOLS_INSTALL: "sudo apt install automake autoconf libtool libtool-bin libltdl-dev libltdl7"
+          LIBXML2_INSTALL: "sudo apt install libxml2 libxml2-dev libxslt1.1 libxslt1-dev"
+          CRYPTO_LIBS_INSTALL: "sudo apt install libssl1.0.0 libssl-dev libnspr4 libnspr4-dev libnss3 libnss3-dev libnss3-tools libgcrypt20 libgcrypt20-dev libgnutls28-dev"
         -os: macos-latest
           BUILD_TOOOLS_INSTALL:
           LIBXML2_INSTALL:
