--- a/.github/workflows/make-check.yml
+++ b/.github/workflows/make-check.yml
@@ -19,7 +19,7 @@ jobs:
           LIBXML2_INSTALL: sudo apt install libxml2 libxml2-dev libxslt1.1 libxslt1-dev
           CRYPTO_LIBS_INSTALL: sudo apt install libssl1.0.0 libssl-dev libnspr4 libnspr4-dev libnss3 libnss3-dev libnss3-tools libgcrypt20 libgcrypt20-dev libgnutls28-dev
         - os: macos-latest
-          BUILD_TOOLS_INSTALL: brew install libtool
+          BUILD_TOOLS_INSTALL: brew install automake autoconf libtool
           LIBXML2_INSTALL: brew install libxml2 libxslt
           CRYPTO_LIBS_INSTALL: brew install openssl nss libgcrypt gnutls
 
