--- a/.github/workflows/make-check.yml
+++ b/.github/workflows/make-check.yml
@@ -21,7 +21,7 @@ jobs:
           CRYPTO_LIBS_INSTALL: sudo apt install libssl1.0.0 libssl-dev libnspr4 libnspr4-dev libnss3 libnss3-dev libnss3-tools libgcrypt20 libgcrypt20-dev libgnutls28-dev
           AUTOGEN_OPTIONS: --enable-werror
         - os: macos-latest
-          UPDATES_INSTALL: sudo brew update
+          UPDATES_INSTALL: brew update
           BUILD_TOOLS_INSTALL: brew install automake autoconf libtool
           LIBXML2_INSTALL: brew install libxml2 libxslt
           # nss is disabled for now
