--- a/.github/workflows/make-check.yml
+++ b/.github/workflows/make-check.yml
@@ -62,31 +62,33 @@ jobs:
             arch: x86_64
           - msystem: MINGW32
             arch: i686
+    defaults:
+      run:
+        shell: msys2 {0}  
     steps:
     - uses: actions/checkout@v2  
     - uses: msys2/setup-msys2@v2
       with:
         msystem: ${{ matrix.msystem }}
-        install: git base-devel
-        update: true
-    - name: install dependencies
-      shell: msys2 {0}
-      run: |
-        pacman --noconfirm --sync --refresh --refresh --sysupgrade --sysupgrade
-        pacman -S --noconfirm --needed mingw-w64-${{ matrix.arch }}-{toolchain,libtool}
-        pacman -S --noconfirm --needed mingw-w64-x86_64-{libxml2,libxslt,openssl,gnutls}
+        release: false  
+        update: false
+        install: >-
+          git
+          base-devel
+          mingw-w64-${{ matrix.arch }}-toolchain
+          mingw-w64-${{ matrix.arch }}-libtool
+          mingw-w64-${{ matrix.arch }}-libxml2
+          mingw-w64-${{ matrix.arch }}-libxslt
+          mingw-w64-${{ matrix.arch }}-openssl
+          mingw-w64-${{ matrix.arch }}-gnutls
     - name: mkdir build
-      shell: msys2 {0}
       run: mkdir build
     - name: configure
-      shell: msys2 {0}
       working-directory: build
-      run: ../autogen.sh --build="x86_64-w64-mingw32" --host="x86_64-w64-mingw32" --enable-unicode=true --enable-mscrypto --enable-mscng --enable-openssl --enable-gnutls --enable-static-linking=false
+      run: ../autogen.sh --build="${{ matrix.arch }}-w64-mingw32" --host="${{ matrix.arch }}-w64-mingw32" --enable-unicode=true --enable-mscrypto --enable-mscng --enable-openssl --enable-gnutls --enable-static-linking=false
     - name: make
-      shell: msys2 {0}
       working-directory: build
       run: make
     - name: make check
-      shell: msys2 {0}
       working-directory: build
       run: make check
