--- a/.github/workflows/make-check.yml
+++ b/.github/workflows/make-check.yml
@@ -123,15 +123,11 @@ jobs:
     steps:
       - name: install dependencies
         run: |
-          echo EXTRAS_FOLDER=%EXTRAS_FOLDER%
-          echo EXTRAS_URL=%EXTRAS_URL%
-          echo EXTRAS_URL=${{ env.EXTRAS_URL }}
-          mkdir %EXTRAS_FOLDER%
+          mkdir ${{ env.EXTRAS_FOLDER }}
+          cd ${{ env.EXTRAS_FOLDER }}
+          Invoke-WebRequest ${{ env.EXTRAS_URL }}/${{ env.LIBXML2_FILE }} -O ${{ env.LIBXML2_FILE }}
           dir
-          cd %EXTRAS_FOLDER%
-          Invoke-WebRequest %EXTRAS_URL%/%LIBXML2_FILE% -O %LIBXML2_FILE%
-          dir
-          7z x %LIBXML2_FILE%
+          7z x ${{ env.LIBXML2_FILE }}
           dir
         env:
           EXTRAS_URL: https://www.aleksey.com/xmlsec/download/extras
