--- a/appveyor.yml
+++ b/appveyor.yml
@@ -31,7 +31,7 @@ environment:
     EXTRAS_URL: https://www.aleksey.com/xmlsec/download/extras
     LIBXML2_FILE: libxml2-2.9.8-noiconv-win-x64.7z
     LIBXSLT_FILE: libxslt-1.1.32-noiconv-win-x64.7z
-    OPENSSL_FILE: openssl-1.1.0h-x64.7z
+    OPENSSL_FILE: openssl-1.1.1l-x64.7z
 
   matrix:
     - COMPILER: MSVC17
