--- a/.github/workflows/make-check.yml
+++ b/.github/workflows/make-check.yml
@@ -93,10 +93,14 @@ jobs:
         release: false  
         update: false
         install: >-
-          git
+          autoconf
+          autoheader
+          automake
+          autoreconf
           base-devel
-          mingw-w64-${{ matrix.arch }}-toolchain
+          git
           libtool
+          mingw-w64-${{ matrix.arch }}-toolchain
           mingw-w64-${{ matrix.arch }}-libxml2
           mingw-w64-${{ matrix.arch }}-libxslt
           mingw-w64-${{ matrix.arch }}-openssl
