--- a/.github/workflows/make-check.yml
+++ b/.github/workflows/make-check.yml
@@ -101,6 +101,7 @@ jobs:
           mingw-w64-${{ matrix.arch }}-toolchain
           mingw-w64-${{ matrix.arch }}-libxml2
           mingw-w64-${{ matrix.arch }}-libxslt
+          mingw-w64-${{ matrix.arch }}-libltdl
           mingw-w64-${{ matrix.arch }}-openssl
           mingw-w64-${{ matrix.arch }}-nspr
           mingw-w64-${{ matrix.arch }}-nss
