--- a/.github/workflows/make-check.yml
+++ b/.github/workflows/make-check.yml
@@ -48,9 +48,18 @@ jobs:
           sudo apt update
           sudo apt install automake autoconf libtool libtool-bin libltdl-dev libltdl7
           sudo apt install libxml2 libxml2-dev libxslt1.1 libxslt1-dev
-          sudo apt install libssl1.1 libssl-dev
+          sudo apt install wget
     - uses: actions/checkout@v2
-    - run: mkdir build
+    - run: mkdir openssl3-build build
+    - name: build-openssl3
+      working-directory: openssl3-build
+      run: |
+          wget  https://www.openssl.org/source/openssl-3.0.3.tar.gz
+          tar xfvz openssl-3.0.3.tar.gz
+          cd openssl-3.0.3
+          ./Configure --prefix /usr
+          make
+          sudo make install
     - name: configure
       working-directory: build
       run: ../autogen.sh --enable-werror --enable-static-linking=${{ matrix.static_linking }}
