debugging github actions

--- a/Makefile.am
+++ b/Makefile.am
@@ -72,11 +72,13 @@ ABS_BUILDDIR=@abs_builddir@
 XMLSEC_OPENSSL_TEST_CONFIG=@OPENSSL_TEST_CONFIG@
 if XMLSEC_NO_APPS_CRYPTO_DYNAMIC_LOADING
 PRECHECK_COMMANDS = \
+        echo "DEBUG: aa=$(XMLSEC_OPENSSL_TEST_CONFIG)" && \
         export XMLSEC_OPENSSL_TEST_CONFIG="$(XMLSEC_OPENSSL_TEST_CONFIG)" && \
 	cd $(ABS_SRCDIR) \
 	$(NULL)
 else
 PRECHECK_COMMANDS= \
+        echo "DEBUG: aa=$(XMLSEC_OPENSSL_TEST_CONFIG)" && \
 	export LD_LIBRARY_PATH="$(ABS_BUILDDIR)/src/.libs:$$LD_LIBRARY_PATH" && \
 	for i in $(XMLSEC_CRYPTO_LIST) ; do \
 	    export LTDL_LIBRARY_PATH="$(ABS_BUILDDIR)/src/$$i/.libs:$$LTDL_LIBRARY_PATH" ; \
